Fixed horizontal overflow from hero image

--- a/CSS-Files/form.css
+++ b/CSS-Files/form.css
@@ -35,15 +35,9 @@ table select{
 	padding-left: 25px;
 }
 
-/*new registration*/
-.form__group{
-padding: 1.2rem;
-	/*background: #00aff0 ;*/
-}
-
 input,select{
 	font-size: 1rem;
-	min-width: 15rem;
+	/* min-width: 15rem; */
 	padding: 0.5rem;
 	text-transform: capitalize;
 	background: #777;
@@ -65,7 +59,6 @@ input::placeholder{
 label{
 	font-size: 1rem;
 	color: whitesmoke;
-	padding-left: 10%;
 	text-transform: capitalize;
 }
 
@@ -170,7 +163,23 @@ textarea{
 	color: #00aff0;
 }
 
+.form__container {
+	height: 50%;
+}
 
+.form{
+	display: flex;
+	flex-flow: wrap;
+	height: 100%;
+	width: 100%;
+	background-size: cover;
+ }
+
+.form__group{
+	padding: .5rem;
+	display: flex;
+	flex-direction: column;
+}
 
 .form__group button{
 	border: none;
@@ -178,13 +187,3 @@ textarea{
 }.form__group button:focus{
 	outline: none;
 }
-
-
- .form{
-	 background-image: LINEAR-GRADIENT(TO RIGHT, RGBA(14,14, 9,0.9), RGBA(101, 101, 101,0.9)), url("assets/img/apartment.jpg");
-	 background-image: -MOZ-LINEAR-GRADIENT(TO RIGHT, RGBA(14,14, 96,0.9), RGBA(101, 101, 101,0.9)), url("assets/img/apartment.jpg");
-	 background-image:-WEBKIT-LINEAR-GRADIENT(TO RIGHT, RGBA(14,14, 96,0.9), RGBA(101, 101, 101,0.9)), url("assets/img/apartment.jpg");
-	 height: 100%;
-	 background-size: cover;
-	 width: 100%;
- }
